--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,370 @@
+:root {
+  --primary-color: #0A0E14;
+  --secondary-color: #0099A3;
+  --accent-color: #C0A088;
+  --dark-gray: #363636;
+  --primary-font: 'Raleway';
+}
+
+@font-face {
+  font-family: 'Raleway';
+  src: url('./assets/fonts/Raleway-VariableFont_wght.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Quicksand';
+  src: url('./assets/fonts/Quicksand-VariableFont_wght.ttf') format('truetype');
+}
+
+/* General Styles */
+body, html {
+  margin: 0;
+  padding: 0;
+  font-family: 'Raleway', sans-serif;
+  box-sizing: border-box;
+  background-color: var(--primary-color);
+}
+
 .App {
-  text-align: center;
+  margin: 2.2rem 10rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Navbar Styles */
+.navbar {
+  background-color: var(--primary-color);
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  gap: 65rem;
+  margin-bottom: 6rem;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  gap: 4rem;
+}
+
+.nav-links .li {
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.nav-links .li:hover {
+  color: var(--secondary-color);
+}
+
+/* Hero Section Styles */
+.hero{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.hero p{
+  font-size: 85px;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.hero p span{
+  color: var(--secondary-color);
+}
+
+.hero .social-links {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+  padding: 0;
+}
+
+.social-links li a{
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.social-links li a:hover {
+  color: var(--secondary-color);
+}
+
+/* About Styles */
+.about{
+  color: white;
+  margin: 11rem 0 14rem 0;
+  text-align: right;
+}
+
+.about h2{
+  font-size: 24px;
+  color: var(--secondary-color);
+}
+
+.about p{
+  font-size: 32px;
+  font-weight: 300;
+  font-family: 'Quicksand';
+}
+
+/* Skills */
+.skills{
+  color: white;
+  margin: 0 0 14rem 0;
+}
+
+.skills h1{
+  font-size: 24px;
+  color: var(--secondary-color);
+}
+
+.skills .skills-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+}
+
+.skills-container .skill .skill-heading{
+  font-size: 26px;
+  font-weight: 400;
+}
+
+.skills-container .skill .skill-description{
+  font-size: 28px;
+  font-weight: 200;
+  font-family: 'Quicksand';
+}
+
+/* Projects Section */
+.projects{
+  color: white;
+  text-align: right;
+  margin: 0 0 14rem 0;
+}
+
+.projects h1{
+  color: var(--secondary-color);
+  font-size: 24px;
+}
+
+.projects .project{
+  display: flex;
+  gap: 2rem;
+  padding-bottom: 2rem;
+}
+
+.projects .project .project-img img{
+  border-radius: 8px;
+}
+
+.projects .project .project-description h2{
+  font-size: 28px;
+}
+.projects .project .project-description h4{
+  color: var(--accent-color);
+}
+
+.projects .project .project-description p{
+  font-size: 22px;
+  font-family: 'Quicksand';
+}
+
+.projects .project .project-description button{
+  font-size: 18px;
+  border-radius: 8px;
+  border: 1px solid var(--accent-color);
+  background-color: var(--primary-color);
+  color: var(--secondary-color);
+  padding: 0.5rem 1rem;
+}
+.projects .project .project-description button:hover{
+  background-color: var(--accent-color);
+  color: var(--primary-color);
+}
+
+.projects .project .project-description button a{
+  color: var(--secondary-color);
+  text-decoration: none;
+}
+
+.projects .project .project-description button a:hover{
+  color: var(--primary-color);
+}
+
+/* Contact Section */
+.contactSection {
+  color: white;
+}
+
+.contactSection h2{
+  color: var(--secondary-color);
+  font-size: 24px;
+}
+
+.contactSection h1{
+  font-size: 90px;
+  font-weight: 400;
+}
+
+.contactSection button{
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
+  padding: 1rem 3rem;
+  border-radius: 8px;
+  border: none;
+  font-size: 18px;
+}
+.contactSection button:hover{
+  background-color: var(--accent-color);
+}
+
+.contactSection button a{
+  color: var(--primary-color);
+  text-decoration: none;
+}
+
+.contactSection button a:hover{
+  color: var(--primary-color);
+}
+
+/* Projects Page */
+.projectsPage{
+  margin: 2.2rem 10rem;
+}
+
+.myProjects h1{
+  color: var(--secondary-color);
+  font-size: 50px;
+  margin-bottom: 2rem;
+}
+
+/* Image Carousel */
+
+.myProjects{
+  display: flex;
+  flex-direction: column;
+  gap: 8rem;
+}
+.slide-img{
+  height: 600px;
+}
+.hoc{
+  width: 1250px;
+}
+
+.projectInfo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  margin-top: 3rem;
+}
+
+.projectInfo .infoBox h2{
+  color: var(--accent-color);
+  padding-bottom: 2rem;
+  font-size: 24px;
+}
+
+
+.projectInfo .infoBox p{
+  font-size: 20px;
+  font-family: 'Quicksand';
+  color: white;
+  font-weight: 100;
+}
+
+/* Contact Page */
+.contact-form-container {
+  display: flex;
+  gap: 10.5rem;
+  justify-content: left;
+  align-items: center;
+  padding: 20px;
+}
+
+.contact-form {
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 500px;
+}
+
+.contact-form h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: var(--secondary-color);
+}
+
+.contact-form label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+  color: var(--accent-color);
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.contact-form input:focus,
+.contact-form textarea:focus {
+  outline: none;
+  border-color: #007bff;
+}
+
+.contact-form button {
+  width: 100%;
+  padding: 10px;
+  background-color: var(--accent-color);
+  color: var(--primary-color);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.contact-form button:hover {
+  background-color: var(--secondary-color);
+}
+
+.contactImg{
+  width: 800px;
+  height: 550px;
+}
+
+/* Responsive styling */
+@media only screen and (max-width: 600px) {
+  .contact-form {
+    padding: 15px;
+    max-width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .contact-form h2 {
+    font-size: 1.5rem;
   }
+
+  .contact-form input,
+  .contact-form textarea {
+    font-size: 14px;
+  }
+
+  .contact-form button {
+    font-size: 14px;
+  }
+}
+
+
+/* Footer */
+.footer{
+  text-align: center;
+  margin-top: 10rem;
+}
+
+.footer p{
+  color: var(--accent-color);
+  font-size: 16px;
 }
